@@ -1,3 +1,8 @@
+2003-02-04  Andreas Jaeger  <aj@suse.de>
+
+	* sysdeps/unix/sysv/linux/hppa/pt-initfini.c: Do not use
+	multi-line strings.
+
 2003-01-30  Jakub Jelinek  <jakub@redhat.com>
 
 	* sysdeps/s390/tls.h (TLS_INIT_TP): Return NULL, not 0.
